[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version', 'entry-points', 'scripts']
name = 'music_manager'
description = 'Music Manager'
readme = 'readme.rst'
authors = [{name='Doug Skrypa', email='dskrypa@gmail.com'}]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
requires-python = '>=3.11'
dependencies = [
    'requests_client @ git+https://github.com/dskrypa/requests_client',
    'wiki_nodes @ git+https://github.com/dskrypa/wiki_nodes',
    'ds_tools[images,J2R] @ git+https://github.com/dskrypa/ds_tools',
    'tk_gui @ git+https://github.com/dskrypa/tk_gui',
    'beautifulsoup4',
    'cachetools',
    'cli-command-parser',
    'fuzzywuzzy',
    'mutagen',
    'ordered-set',
    'pillow',
    'plexapi',
    'python-Levenshtein',
    'requests',
    'rich',
    'send2trash',
    'symspellpy',
    'urllib3',
]

[project.urls]
Source = 'https://github.com/dskrypa/music_manager'

[project.optional-dependencies]
# bpm: Used for BPM calculation; on Win10 with Python 3.8, requires VS 2019 build tools:
# https://visualstudio.microsoft.com/downloads/#build-tools-for-visual-studio-2019
# Note: ffmpeg Also requires: https://ffmpeg.org/download.html + ffmpeg in PATH
bpm = ['numpy', 'aubio']
ipod = ['pypod @ git+https://github.com/dskrypa/pypod']
gui = ['filelock', 'psutil', 'screeninfo', 'lark', 'watchdog']
plex_db = ['paramiko', 'scp']
plex_gui = ['FreeSimpleGUI']
tests = ['coverage']

[tool.setuptools]
include-package-data = true
package-dir = {'' = 'lib'}

[tool.setuptools.packages.find]
where = ['lib']
include = ['music', 'music.*', 'music_gui', 'music_gui.*']
namespaces = false

[tool.setuptools.dynamic]
version = {attr='music.__version__.__version__'}
entry-points = {file=['entry_points.txt']}

[tool.uv]
reinstall-package = ['music_manager']  # Always reinstall to generate entry points


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.ipynb_checkpoints',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pyenv',
    '.pytest_cache',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '.vscode',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'site-packages',
    'venv',
]
line-length = 120
indent-width = 4
target-version = 'py310'
show-fixes = true


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ['E4', 'E7', 'E9', 'F', 'W', 'I001']
ignore = [
    'E402',  # module level import not at top of file
    'F401',  # <module> imported but unused
    'F841',  # local variable <var> is assigned to but never used
#    'W503',  # line break before binary operator (conflicts with Black)
    'W605',  # invalid escape sequence <seq>
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ['ALL']
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$'


[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = 'lf'

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this to be opt-out in the future.
docstring-code-format = false
# Set the line length limit used when formatting code snippets in docstrings.
# This only has an effect when the `docstring-code-format` setting is enabled.
docstring-code-line-length = 'dynamic'


[tool.ruff.lint.isort]
combine-as-imports = true
