[metadata]
name = music_manager
version = attr: music.__version__.__version__
description = Music Manager
url = https://github.com/dskrypa/music_manager
project_urls =
    Source = https://github.com/dskrypa/music_manager
long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Doug Skrypa
author_email = dskrypa@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
include_package_data = True
entry_points = file: entry_points.txt
packages = find:
package_dir = = lib
python_requires = >=3.10
tests_require = testtools; coverage
install_requires =
    requests_client @ git+https://github.com/dskrypa/requests_client
    wiki_nodes @ git+https://github.com/dskrypa/wiki_nodes
    ds_tools[images,J2R] @ git+https://github.com/dskrypa/ds_tools
    tk_gui @ git+https://github.com/dskrypa/tk_gui
    beautifulsoup4
    cachetools
    cli_command_parser
    fuzzywuzzy
    mutagen
    ordered-set
    pillow
    plexapi
    python-Levenshtein
    requests
    send2trash
    symspellpy
    urllib3

[options.packages.find]
where = lib

[options.package_data]
music.text._data.scowl = *

[options.extras_require]
# bpm: Used for BPM calculation; on Win10 with Python 3.8, requires VS 2019 build tools:
# https://visualstudio.microsoft.com/downloads/#build-tools-for-visual-studio-2019
# Note: ffmpeg Also requires: https://ffmpeg.org/download.html + ffmpeg in PATH
bpm = aubio; ffmpeg-python; numpy
ipod = pypod @ git+https://github.com/dskrypa/pypod
gui = filelock; psutil; pysimplegui; screeninfo; lark; watchdog
plex_db = paramiko; scp
